# mlmorph

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  COPYING  Dockerfile  LICENSE.txt  Makefile  Makefile.inc  NOTES.md  README.md  VERSION  afilter.fst  deriv.fst  malayalam.fst  morph.fst  ninfl.fst  noun.fst  num.fst  plural.fst  setup.cfg  setup.py  symbols.fst  tags.json  verb.fst  vinfl.fst
deriv/: Makefile  README.md  noun-from-adverb.fst  noun-from-noun.fst  noun-from-verb.fst
docs/: analyser.md  cardinals.md  faq.md  fst.md  generator.md  history.md  index.md  ner.md  number.md  package-lock.json  package.json  pos.md  reference.md  spellcheck.md
docs/.vitepress/: config.js
docs/.vitepress/theme/: custom.css
docs/components/: Analyser.vue  Generator.vue  Ner.vue  Number.vue  POS.vue  Spellchecker.vue
docs/components/editor/: MenuBar.vue  MenuItem.vue  SpellcheckerExtension.js  index.vue
docs/deriv/: index.md  noun-from-verb.md
docs/dev/: python.md  web.md
docs/lexicon/: index.md  verbs.md
docs/ninfl/: cases.md  gender.md  index.md  number.md
docs/phon/: index.md
docs/vinfl/: aspect.md  clauses.md  index.md  mood.md  questions.md  tense.md  voice.md
lexicon/: Makefile  abbreviations.fst  abbreviations.lex  adjectives.fst  adjectives.lex  adverbs.fst  adverbs.lex  affirmatives.lex  borrowed-words.fst  conjunctions.fst  conjunctions.lex  demonstrative-prenominal-base.fst  demonstrative-prenominal-base.lex  demonstratives.fst  demonstratives.lex  english-borrowed.lex  indeclinables.fst  interjections.fst  interjections.lex  languages.lex  misc.fst  misc.lex  negations.lex  nouns-sanskrit.fst  nouns-sanskrit.lex  nouns.fst  nouns.lex  person-names.lex  places.lex  polarity.fst  postpositions.fst  postpositions.lex  prepositions.fst  prepositions.lex  pronouns.fst  pronouns.lex  proper-nouns.fst  proper-nouns.lex  proper_nouns.lex  quantifiers.fst  (+10 more)
ninfl/: Makefile  accusative.fst  adjective.fst  dative.fst  genitive.fst  instrumental.fst  locative.fst  ninfl.fst  plural.fst  sociative.fst  standalone-adjective.fst  vocative.fst
ninfl/cases/: Makefile  ablative.fst  accusative.fst  allative.fst  cases.fst  dative.fst  genitive.fst  instrumental.fst  locative.fst  perlative.fst  sociative.fst  vocative.fst
phon/: Makefile  chillu-consonant.fst  chillu-normalization.fst  consonant-consonant.fst  consonant-vowel.fst  deletion.fst  duplication.fst  exceptions.fst  phon.fst  substitution.fst  verb-negation.fst  virama-consonant.fst  virama-vowel.fst  vowel-to-vowelsign.fst  vowelsign-consonant.fst  vowelsign-vowel.fst  word-vowel.fst
python/: LICENSE.txt  MANIFEST.in  Makefile  README.rst  mlmorph-test.py  mlmorph.py  pyproject.toml  setup.cfg  setup.py  tox.ini
python/mlmorph/: __init__.py  __main__.py  analyser.py  foreign_word_detector.py  generator.py  mlmorph.py  normalizer.py  number.py  utils.py
python/mlmorph/spellchecker/: __init__.py  __main__.py  spellchecker.py  suggestion.py  utils.py
python/mlmorph/spellchecker/resources/: README.md  common_mistakes.csv
python/mlmorph/spellchecker/strategies/: __init__.py  chillu_normalization.py  chillu_to_virama_form.py  consonant_virama_to_chillu.py  geminate_consonants.py  insert_y_before_kkuka.py  mpa_correction.py  nta_correction.py  phonetic_similarity.py  suggestion_strategy.py  virama_insertion.py  visual_similarity.py  vowel_elongation.py  vowel_shortening.py
python/test/unit/: test_mlmorph.py
python/test/unit/spellchecker/: test_spellchecker.py
scripts/: corpora-cleanup.sed  create-dataset.py  print_foreign_words.sh  print_unsupported_words.sh  sort-lexicon.sh
scripts/lexicon/: README.md  curationdata.py  requirements.txt
spellcheck/: __init__.py  spellcheck.py
spellcheck/strategies/: __init__.py  chillu_normalization.py  chillu_to_virama_form.py  consonant_aspiration_correction.py  consonant_virama_to_chillu.py  consonant_voice_correction.py  geminate_consonants.py  insert_y_before_kkuka.py  lla_correciton.py  mpa_correction.py  mpa_fixes.py  nta_correction.py  nta_fixes.py  suggestion_strategy.py  tta_correction.py  virama_insertion.py  visual_similarity.py  vowel_elongation.py  vowel_shortening.py
tests/: coverage-test-1.txt  coverage-test-2.txt  coverage-test-3.txt  coverage-test-4.txt  coverage-test-5.txt  coverage-test-6.txt  coverage-test-7.txt  coverage-test.py  data.tsv  mlmorph-test.py  smile-test.txt  tests.json
tests/coverage/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  deshabhimani-all-unique-words.txt  mlwiki-all-unique-words-06.txt
tools/: visualize.script
vinfl/: Makefile  concessive.fst  converb-past.fst  converb.fst  future.fst  past-forms.fst  past.fst  present.fst  tense.fst  verb-polar-question.fst  vinfl.fst
vinfl/adverbs/: Makefile  adverbs.fst  clauses.fst  converb-future.fst  converb-past.fst  converb-present.fst  converb.fst
vinfl/aspects/: Makefile  aspects.fst  habitual.fst  iterative.fst  perfect.fst
vinfl/moods/: Makefile  abilitative.fst  compulsive.fst  conditional.fst  desiderative.fst  imperative.fst  irrealis.fst  monitory.fst  moods.fst  optative.fst  permissive.fst  precative.fst  promissive.fst  purposive.fst  quotative.fst  satisfactive.fst
vinfl/voices/: Makefile  causative.fst  passive.fst
web/: .eslintrc.json  Procfile  app.py  mlmorph-apache2.conf.example  mlmorph.wsgi  mlmorph.wsgi.example  mlmorphweb.py  public  requirements.txt  spec.yaml
web/static/: MorphemeChips.js  main.js  spellcheck.css  spellcheck.js  style.css  tags.json
web/templates/: layout.html  mlmorph.html  spellcheck.html
