
[metadata]
name = mlmorph
version = file: VERSION
description = Malayalam morphology analyser
long_description = file: README.md, LICENSE.txt
keywords = Malayalam morphology FST analyser generator
license = GPL v3
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
include_package_data = True
package_dir=
    =python
packages=find:

[options.packages.find]
where=python

[options.package_data]
*=data/malayalam.a
