
[metadata]
name = mlmorph
version = 1.0.0.dev3
author = Santhosh Thottingal
author-email = santhosh.thottingal@gmail.com
description = Malayalam morphology analyser
long_description = file: README.rst
keywords = Malayalam morphology FST analyser generator
license = MIT
license-file = LICENSE.txt
url = https://gitlab.com/smc/mlmorph
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: Malayalam

[options]
include_package_data = True
packages = mlmorph
install_requires=
    regex
    hfst

[options.package_data]
*=data/malayalam.a
